@@ -3,6 +3,7 @@ This this the changelog file for the Pothos C++ library.
 Release 0.1.1 (pending)
 ==========================
 
+- Fixed Topology::waitInactive() false positive condition
 - Fixed usage of managed buffers for message back-pressure
 
 Release 0.1.0 (2014-12-21)
